[package]
name = "const-vec"
version = "1.0.0"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
edition = "2018"
categories = ["data-structures"]
keywords = ["vector", "array", "const"]
description = "Vec-like data structure with immutable push method."
repository = "https://github.com/timothee-haudebourg/const-vec"
documentation = "https://docs.rs/const-vec"
license = "MIT/Apache-2.0"
readme = "README.md"
